# hw0-intro

./: .gitignore  CMakeLists.txt  README.md  quad_test.cpp  triangle_test.cpp  tutorial.cpp
CGL/: CMakeLists.txt  README.md  vector2D.h
CGL/docs/: Doxyfile  mainpage.md
CGL/examples/: CMakeLists.txt  event.cpp  template.cpp  text.cpp  triangle.cpp
CGL/include/CGL/: CGL.h  color.h  console.h  matrix3x3.h  misc.h  osdtext.h  quaternion.h  renderer.h  spectrum.h  vector2D.h  viewer.h
CGL/src/: CMakeLists.txt  color.cpp  matrix3x3.cpp  osdtext.cpp  path.cpp  viewer.cpp
CGL/tests/: CMakeLists.txt  osd.cpp
